# actions

./: README.md  cabal.project
actions/: README.md  actions.cabal
actions/src/Data/: Biased.hs  Handedness.hs
actions/src/Data/Semigroup/: Action.hs
monad-update/: monad-update.cabal
monad-update/src/Control/Monad/: Update.hs
monad-update/src/Control/Monad/Trans/: Update.hs
monad-update/src/Data/Functor/Bind/: Syntax.hs
