cabal-version:      3.0
name:               monad-update
version:            1.0
synopsis:           Update monads, in many forms.
description:        A description will one day go here.
homepage:           https://github.com/kozross/actions
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/actions/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==9.0.1
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules:
    Control.Monad.Trans.Update
    Control.Monad.Update

  other-modules:   Data.Functor.Bind.Syntax
  build-depends:
    , actions        ^>=1.0
    , base           >=4.15    && <5
    , group-theory   ^>=0.2.2
    , semigroupoids  ^>=5.3.5
    , transformers   ^>=0.5.6.2

  hs-source-dirs:  src
